# cmake_example

1/: CMakeLists.txt  stack_token.c
1/include/: tree_token.h
1111/: tree_token.c
2/: CMakeLists.txt  lab24.c
2/lab_struct/: lab24_struct.h
3/: CMakeLists.txt
3/lab_struct/: CMakeLists.txt
3/tree_token/: CMakeLists.txt
3333/stack_token/: CMakeLists.txt  stack_token.h
4/includes/: version.h.in
4/lab_struct/: lab24_struct.c
4/queue_token/: queue_token.c  queue_token.h
4444/: CMakeLists.txt  lab24.c
4444/queue_token/: CMakeLists.txt
